--- a/app/src/main/res/layout/activity_scholarship_page1.xml
+++ b/app/src/main/res/layout/activity_scholarship_page1.xml
@@ -1,104 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/offwhite"
     tools:context=".scholarships.ScholarshipPage1">
 
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="543dp"
-        android:background="@drawable/sch_custom_bg_page1"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingTop="5dp">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="89dp"
-            android:layout_height="111dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/sch_phinmalogo"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/josefin_sans_bold"
-            android:text="@string/scholarships_title"
-            android:textColor="@color/white"
-            android:textSize="36sp" />
+            android:background="@color/phinmaGreen"
+            android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
+            app:navigationIcon="@drawable/ic_menu"
+            app:navigationIconTint="@android:color/white"
+            app:title="Scholarships"
+            app:titleTextColor="@color/phinmaYellow"
+            app:menu="@menu/top_app_bar_menu" />
 
-        <TextView
-            android:layout_width="355dp"
-            android:layout_height="256dp"
-            android:fontFamily="@font/montserrat_bold"
-            android:gravity="center"
-            android:text="@string/scholarship_description"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            tools:ignore="TextSizeCheck" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/topAppBar"
+            android:layout_above="@id/bottomNavigationView">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="287dp"
-            android:layout_height="100dp"
-            app:srcCompat="@drawable/sch_hands"
-            tools:ignore="ContentDescription" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom"
-        android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="543dp"
+                    android:background="@drawable/sch_custom_bg_page1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingTop="5dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:fontFamily="@font/josefin_sans_bold"
-            android:gravity="center"
-            android:text="@string/sch_descriptionScholarshipsList"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            tools:ignore="TextSizeCheck" />
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="89dp"
+                        android:layout_height="111dp"
+                        android:layout_gravity="center"
+                        app:srcCompat="@drawable/sch_phinmalogo"
+                        tools:ignore="ContentDescription" />
 
-        <ImageButton
-            android:id="@+id/btn_scholarship_lists"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#00FFFFFF"
-            android:contentDescription="button for lists of scholarships"
-            android:src="@drawable/arrow_right2"
-            tools:ignore="HardcodedText" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/josefin_sans_bold"
+                        android:text="@string/scholarships_title"
+                        android:textColor="@color/white"
+                        android:textSize="36sp" />
+
+                    <TextView
+                        android:layout_width="355dp"
+                        android:layout_height="256dp"
+                        android:fontFamily="@font/montserrat_bold"
+                        android:gravity="center"
+                        android:text="@string/scholarship_description"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        tools:ignore="TextSizeCheck" />
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="287dp"
+                        android:layout_height="100dp"
+                        app:srcCompat="@drawable/sch_hands"
+                        tools:ignore="ContentDescription" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/josefin_sans_bold"
+                    android:gravity="center"
+                    android:text="@string/sch_descriptionScholarshipsList"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    tools:ignore="TextSizeCheck" />
+
+                <ImageButton
+                    android:id="@+id/btn_scholarship_lists"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="#00FFFFFF"
+                    android:contentDescription="button for lists of scholarships"
+                    android:src="@drawable/arrow_right2"
+                    tools:ignore="HardcodedText" />
+
+            </LinearLayout>
+        </ScrollView>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             style="@style/BottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="?android:attr/windowBackground"
-            app:itemActiveIndicatorStyle="@style/ShapeAppearance.Material3.Corner.None"
-            app:itemBackground="@color/phinmaGreen"
-            app:itemIconTint="@color/navbar_icon_colors"
-            app:itemRippleColor="@color/phinmaYellow"
-            app:itemTextColor="@color/white"
-            app:labelVisibilityMode="unlabeled"
-            app:menu="@menu/bottom_nav" />
+            android:layout_alignParentBottom="true" />
 
+    </RelativeLayout>
 
-    </LinearLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        style="@style/SideDrawerView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start" />
 
-
-
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
