--- a/app/src/main/res/layout/activity_urdaneta.xml
+++ b/app/src/main/res/layout/activity_urdaneta.xml
@@ -1,117 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@id/main">
+    android:background="#E4E3DF"
+    android:fitsSystemWindows="true">
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:background="@drawable/gray_bg">
+        android:layout_height="match_parent">
 
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-
-        <TextView
-            android:id="@+id/campus_title"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:text="Urdaneta Campus"
-            android:textColor="#2E4D1E"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textAlignment="center"/>
+            android:background="@color/phinmaGreen"
+            android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
+            app:navigationIcon="@drawable/ic_menu"
+            app:navigationIconTint="@android:color/white"
+            app:title="Modalities"
+            app:titleTextColor="@color/phinmaYellow"
+            app:menu="@menu/top_app_bar_menu" />
 
-        <!-- Button with larger size -->
-        <Button
-            android:id="@+id/button_allied_health"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="16dp"
-            android:text="College of Allied Health Sciences"
-            android:drawableEnd="@drawable/arrow_right"
-            android:padding="16dp"
-            android:textSize="16sp" />
+            android:layout_height="match_parent"
+            android:layout_below="@id/topAppBar"
+            android:layout_above="@id/bottomNavigationView"
+            android:fillViewport="true"
+            android:background="@drawable/gray_bg">
 
-        <Button
-            android:id="@+id/button_management"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/campus_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="30dp"
+                    android:text="Urdaneta Campus"
+                    android:textColor="#2E4D1E"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textAlignment="center" />
+
+                <Button
+                    android:id="@+id/button_allied_health"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="College of Allied Health Sciences"
+                    android:drawableEnd="@drawable/arrow_right"
+                    android:padding="16dp"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/button_management"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="College of Management and Accountancy"
+                    android:drawableEnd="@drawable/arrow_right"
+                    android:padding="16dp"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/button_criminal"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="College of Criminal Justice Education"
+                    android:drawableEnd="@drawable/arrow_right"
+                    android:padding="16dp"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/button_engineering"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="College of Engineering and Architecture"
+                    android:drawableEnd="@drawable/arrow_right"
+                    android:padding="16dp"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/button_science"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="Bachelor of Science in Computer Science"
+                    android:drawableEnd="@drawable/arrow_right"
+                    android:padding="16dp"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/button_english"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="Bachelor of Arts in English Language"
+                    android:drawableEnd="@drawable/arrow_right"
+                    android:padding="16dp"
+                    android:textSize="16sp" />
+
+
+            </LinearLayout>
+        </ScrollView>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            style="@style/BottomNavigationView"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="16dp"
-            android:text="College of Management and Accountancy"
-            android:drawableEnd="@drawable/arrow_right"
-            android:padding="16dp"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" />
 
-        <Button
-            android:id="@+id/button_criminal"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="16dp"
-            android:text="College of Criminal Justice Education"
-            android:drawableEnd="@drawable/arrow_right"
-            android:padding="16dp"
-            android:textSize="16sp" />
+    </RelativeLayout>
 
-        <Button
-            android:id="@+id/button_engineering"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="16dp"
-            android:text="College of Engineering and Architecture"
-            android:drawableEnd="@drawable/arrow_right"
-            android:padding="16dp"
-            android:textSize="16sp" />
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        style="@style/SideDrawerView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start" />
 
-        <Button
-            android:id="@+id/button_science"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="16dp"
-            android:text="Bachelor of Science in Computer Science"
-            android:drawableEnd="@drawable/arrow_right"
-            android:padding="16dp"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/button_english"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="16dp"
-            android:text="Bachelor of Arts in English Language"
-            android:drawableEnd="@drawable/arrow_right"
-            android:padding="16dp"
-            android:textSize="16sp" />
-
-    </LinearLayout>
-    </ScrollView>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:itemActiveIndicatorStyle="@style/ShapeAppearance.Material3.Corner.None"
-        app:itemBackground="@color/phinmaGreen"
-        app:itemIconTint="@color/navbar_icon_colors"
-        app:itemRippleColor="@color/phinmaYellow"
-        app:itemTextColor="@color/white"
-        app:labelVisibilityMode="unlabeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:menu="@menu/bottom_nav"
-        style="@style/BottomNavigationView" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
