--- a/app/src/main/res/layout/activity_event_page1.xml
+++ b/app/src/main/res/layout/activity_event_page1.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/phinmaGreen"
+            app:titleTextAppearance="@style/CustomTopAppBarTitle"
             android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,10 +60,11 @@
             android:id="@+id/dateText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/josefinsans_bold"
             android:padding="10dp"
             android:text="Current Date"
-            android:textSize="18sp"
             android:textColor="@color/black"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +80,7 @@
             android:layout_margin="8dp"
             android:backgroundTint="@color/phinmaGreen"
             android:text="+ New Event"
+            android:fontFamily="@font/merriweather_regular"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dateText" />
@@ -118,13 +121,16 @@
             android:id="@+id/btn_show_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="88dp"
+            android:layout_margin="5dp"
             android:backgroundTint="@color/phinmaGreen"
             android:text="Show all"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/merriweather_regular"
+            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />
 
 
         <!--        DITO LANG SA GITNA OKIE-->
