--- a/app/src/main/res/layout/custom_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/custom_spinner_dropdown_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:padding="8dp"
     android:textSize="16sp"
-    android:fontFamily="sans-serif-medium"
+    android:fontFamily="@font/merriweather_regular"
     android:background="@color/black"
     android:textColor="@color/white"
     android:ellipsize="end"
