--- a/app/src/main/res/layout/custom_spinner_selected_item.xml
+++ b/app/src/main/res/layout/custom_spinner_selected_item.xml
@@ -3,8 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    android:textSize="18sp"
-    android:fontFamily="sans-serif-medium"
+    android:layout_marginStart="5dp"
+    android:textSize="14sp"
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:fontFamily="@font/merriweather_regular"
     android:textColor="@color/black"
     android:ellipsize="end"
     android:singleLine="false"
