--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -33,6 +33,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginVertical="5dp"
+        android:layout_marginEnd="5dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="4dp">
 
