--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,9 +37,23 @@
         <item name="android:background">@color/white</item>
         <item name="itemIconTint">@color/black</item>
         <item name="itemTextColor">@color/black</item>
+        <item name="itemTextAppearance">@style/CustomMenuTextAppearance</item>
         <item name="android:fitsSystemWindows">true</item>
         <item name="headerLayout">@layout/drawer_header</item>"
         <item name="menu">@menu/drawer_menu</item>
     </style>
+
+    <style name="CustomMenuTextAppearance" parent="TextAppearance.AppCompat.Menu">
+        <item name="android:fontFamily">@font/merriweather_bold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="CustomTopAppBarTitle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:fontFamily">@font/josefinsans_regular</item> <!-- Use your custom font -->
+        <item name="android:textColor">@color/phinmaYellow</item> <!-- Set your desired color -->
+        <item name="android:textSize">24sp</item> <!-- Adjust text size as needed -->
+    </style>
+
 
 </resources>
