--- a/app/src/main/res/layout/activity_school_selection.xml
+++ b/app/src/main/res/layout/activity_school_selection.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_schoolselection">
@@ -9,10 +10,10 @@
         android:id="@+id/flFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:elevation="10dp"
-        android:background="@android:color/transparent" />
+        android:layout_alignParentTop="true"
+        android:background="@android:color/transparent"
+        android:elevation="10dp" />
 
     <TextView
         android:id="@+id/textview_school_selection"
@@ -21,25 +22,25 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/myriad_pro_bold"
         android:gravity="center"
-        android:text="SCHOOLS"
-        android:textColor="@color/white"
         android:shadowColor="@color/black"
         android:shadowDx="7"
         android:shadowDy="7"
         android:shadowRadius="6"
+        android:text="SCHOOLS"
+        android:textColor="@color/white"
         android:textSize="60sp" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="5dp"
-        android:layout_below="@id/textview_school_selection">
+        android:layout_below="@id/textview_school_selection"
+        android:layout_marginHorizontal="5dp">
 
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnCount="2"
-            android:rowCount="7" >
+            android:rowCount="7">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardUpang"
